# dtu-notes

./: CHANGELOG.md  CUSTOM_TEMPLATES.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  TEMPLATE_EXAMPLE.md  TEMPLATE_SYSTEM_SUMMARY.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  dependency-check.yml  dev-build.yml  release.yml
docs/: API.md  CONFIG_MANAGEMENT.md  CONFIG_QUICK_REFERENCE.md  DEVELOPMENT.md  INDEX.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  README.md  TEMPLATE_ARCHITECTURE.md  TROUBLESHOOTING.md  config-example.json  example.noter.config.toml
notes/02102/lectures/: 2025-10-09-02102-lecture.typ
notes/02105/lectures/: 2025-10-09-02105-lecture.typ
src/: config.rs  data.rs  lib.rs  main.rs  utils.rs
src/commands/: assignments.rs  config_cmd.rs  courses.rs  dev_tools.rs  info.rs  mod.rs  notes.rs  search.rs  setup.rs  templates.rs  typst.rs
src/core/: assignment_manager.rs  course_management.rs  dev_data_generator.rs  directory_scanner.rs  file_operations.rs  github_template_fetcher.rs  mod.rs  sample_content.rs  search_engine.rs  setup_manager.rs  status_manager.rs  template_engine.rs  typst_compiler.rs  validation.rs
src/core/template/: builder.rs  config.rs  constants.rs  context.rs  discovery.rs  engine.rs  mod.rs  validation.rs
src/ui/: formatters.rs  mod.rs  output.rs  prompts.rs
